deploy/k8s/overlays/main/resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: momo-api
spec:
  template:
    spec:
      containers:
        - name: api
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
