deploy/k8s/overlays/main/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: momo-api
spec:
  rules:
    - host: momo.jinmu.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: momo-api
                port:
                  number: 80
